<resources>
    <string name="app_name">Mi primera calculadora</string>
    <string name="action_settings">Configuración</string>
    <string name="strCorreccion">C</string>
    <string name="strNegacion">+/-</string>
    <string name="strPorcentaje">%</string>
    <string name="strDelete">DEL</string>
    <string name="strPunto">.</string>
    <string name="strUno">1</string>
    <string name="strDos">2</string>
    <string name="strTres">3</string>
    <string name="strCuatro">4</string>
    <string name="strCinco">5</string>
    <string name="strSeis">6</string>
    <string name="strSiete">7</string>
    <string name="strOcho">8</string>
    <string name="strNueve">9</string>
    <string name="strCero">0</string>
    <string name="strSuma">+</string>
    <string name="strResta">-</string>
    <string name="strMultiplicacion">x</string>
    <string name="strDivision">/</string>
    <string name="strIgual">=</string>
    <string name="strErrorDivisionCero">La división entre cero no existe</string>
    <string name="strIrAWebView">Ir a WebView</string>

</resources>
