<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="2dp"
    android:paddingRight="2dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="app.walymoss.com.holamundo.MainActivity"
    tools:showIn="@layout/activity_main"
    android:columnCount="4"
    android:rowCount="7"
    android:id="@+id/gridLayout"
    >
    
    <TextView 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="0"
        android:layout_row="0"
        android:layout_columnSpan="4"
        android:textSize="60dp"
        android:layout_marginRight="6dp"
        android:layout_gravity="right"
        android:textStyle="italic"
        android:id="@+id/txtValor"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strCorreccion"
        android:id="@+id/btnCorreccion"
        android:layout_row="1"
        android:layout_column="0"
        android:textSize="30dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strNegacion"
        android:id="@+id/btnNegacion"
        android:layout_row="1"
        android:layout_column="1"
        android:textSize="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strPorcentaje"
        android:id="@+id/btnPorcentaje"
        android:layout_row="1"
        android:layout_column="2"
        android:textSize="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strDelete"
        android:id="@+id/btnDelete"
        android:layout_row="1"
        android:layout_column="3"
        android:textSize="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strSiete"
        android:id="@+id/btnSiete"
        android:layout_row="2"
        android:layout_column="0"
        android:textSize="30dp"
        android:width="50dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strOcho"
        android:id="@+id/btnOcho"
        android:layout_row="2"
        android:layout_column="1"
        android:textSize="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strNueve"
        android:id="@+id/btnNueve"
        android:layout_row="2"
        android:layout_column="2"
        android:textSize="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strDivision"
        android:id="@+id/btnDivision"
        android:layout_row="2"
        android:layout_column="3"
        android:textSize="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strCuatro"
        android:id="@+id/btnCuatro"
        android:layout_row="3"
        android:layout_column="0"
        android:textSize="30dp"
        android:width="50dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strCinco"
        android:id="@+id/btnCinco"
        android:layout_row="3"
        android:layout_column="1"
        android:textSize="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strSeis"
        android:id="@+id/btnSeis"
        android:layout_row="3"
        android:layout_column="2"
        android:textSize="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strMultiplicacion"
        android:id="@+id/btnMultiplicacion"
        android:layout_row="3"
        android:layout_column="3"
        android:textSize="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strUno"
        android:id="@+id/btnUno"
        android:layout_row="4"
        android:layout_column="0"
        android:textSize="30dp"
        android:width="50dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strDos"
        android:id="@+id/btnDos"
        android:layout_row="4"
        android:layout_column="1"
        android:textSize="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strTres"
        android:id="@+id/btnTres"
        android:layout_row="4"
        android:layout_column="2"
        android:textSize="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strResta"
        android:id="@+id/btnResta"
        android:layout_row="4"
        android:layout_column="3"
        android:textSize="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strCero"
        android:id="@+id/btnCero"
        android:layout_row="5"
        android:layout_column="0"
        android:textSize="30dp"
        android:width="50dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strPunto"
        android:id="@+id/btnPunto"
        android:layout_row="5"
        android:layout_column="1"
        android:textSize="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strIgual"
        android:id="@+id/btnIgual"
        android:layout_row="5"
        android:layout_column="2"
        android:textSize="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strSuma"
        android:id="@+id/btnSuma"
        android:layout_row="5"
        android:layout_column="3"
        android:textSize="30dp"/>


</GridLayout>
